Fixed paused message overlapping fullscreen control icon

--- a/src/assets/scss/site/components/_index.photography.scss
+++ b/src/assets/scss/site/components/_index.photography.scss
@@ -45,7 +45,7 @@
     }
     .paused-message {
         position:absolute;
-        top:0;
+        bottom:0;
         z-index:1;
         width:100%;
         @extend %type-background;
